--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Build argument for API URL
+# Build argument for API URL (defaults to localhost for local dev)
 ARG VITE_API_URL=http://localhost:3001
 ENV VITE_API_URL=$VITE_API_URL
 
@@ -16,11 +16,17 @@ COPY . .
 # Build the app
 RUN npm run build
 
+# Verify build output
+RUN ls -la /app/dist || echo "Build output not found!"
+
 # Production stage with nginx
 FROM nginx:alpine
 
 # Copy built files
 COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Verify files were copied
+RUN ls -la /usr/share/nginx/html || echo "Files not found in nginx html directory!"
 
 # Copy nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
