--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,22 @@
 services:
+  postgres:
+    image: postgres:16-alpine
+    container_name: updraft-postgres-dev
+    environment:
+      POSTGRES_USER: updraft
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-updraft_dev}
+      POSTGRES_DB: updraft
+    ports:
+      - "${POSTGRES_PORT:-5432}:5432"
+    volumes:
+      - postgres_data_dev:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U updraft"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
   backend:
     build:
       context: ./backend
@@ -9,8 +27,12 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=3001
+      - DATABASE_URL=postgresql://updraft:${POSTGRES_PASSWORD:-updraft_dev}@postgres:5432/updraft
     env_file:
       - ./backend/.env.local
+    depends_on:
+      postgres:
+        condition: service_healthy
     volumes:
       - ./backend/src:/app/src
       - ./backend:/app
@@ -34,4 +56,7 @@ services:
     depends_on:
       - backend
     restart: unless-stopped
+
+volumes:
+  postgres_data_dev:
 
